# AI-EDITH

./: .gitignore  Alarm_Data.txt  Alert.py  Edith.py  Make_req.py  README.md  chat_history.txt  co_brain.py  conv_history.txt  input.txt  internet_check.py  main.py  pyproject.toml  requirements.txt  test.py  ui.py
AIvenv/: pyvenv.cfg
AIvenv/Scripts/: activate  activate.bat
Automation/: Battery.py  automation_brain.py  open_app.py  play_music_soprtify.py  play_music_yt.py  scroll_system.py  tab_automation.py  web_data.py  web_open.py  youtube_playback.py
Brain/: brain.py  open_ai.py
Data/: Alarm_Data.txt  ChatLog.json  DLG_Data.py  input.txt  schedule.txt  websites.json
Device_info/: info.py
Features/: AI_Image_gen.py  Brightness_set.py  Mic_health.py  Run_app.py  check_internet_speed.py  content_write.py  control_volume.py  create_file.py  speaker_test.py
Speechtotext/: GTTS.py  ListenFN.py  NetHyTech_STT.py  STT_5.py  SpeechToText.py  speech_to_text_fixed.py  speechtotext1.py
TextToSpeech/: Ai_tts.py  DF_TTS .py  F_DF_TTS.py  First_DF_TTS.py  TTS.py  TTS1.py  TTSB.py
TextToSpeech/__pycache__/: F_DF_TTS.py
Time_operations/: Brain.py  through_Alert.py
Vision/: PC_Cam.py
Weather_check/: Check__weather.py
Whatsapp_automation/: wa.py
user_data/: ChatLog.json  input.txt  websites.json
