[project]
name = "ai-edith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appopener>=1.7",
    "colorlog>=6.9.0",
    "comtypes>=1.4.10",
    "edge-tts>=7.0.2",
    "googlesearch-python>=1.3.0",
    "gradio-client>=1.10.0",
    "groq>=0.24.0",
    "lxml-html-clean>=0.4.2",
    "opencv-python>=4.11.0.86",
    "psutil>=7.0.0",
    "pyaudio>=0.2.14",
    "pycaw>=20240210",
    "pygame>=2.6.1",
    "pywhatkit>=5.4",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "selenium>=4.32.0",
    "streamlit>=1.48.1",
    "webdriver-manager>=4.0.2",
    "winotify>=1.1.0",
    "wmi>=1.5.1",
    "yaspin>=3.1.0",
]
